# healthy_habits_tracker

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml  utils.py
api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
habits/: bot.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_options_alter_habit_location_and_more.py  0003_habit_activity.py  0004_alter_habit_activity.py  0005_alter_habit_activity.py  0006_alter_habit_periodicity.py  0007_habit_created_at_habit_is_active_and_more.py  0008_alter_habit_is_active.py  0009_remove_habit_last_date_worked_habit_date_worked.py  0010_remove_habit_created_at_remove_habit_date_worked_and_more.py  0011_alter_habit_telegram_chat_id.py  0012_remove_habit_is_active.py  0013_remove_habit_telegram_chat_id_and_more.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py
